--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: rgb(255, 228, 174);
+    background-color: rgb(0, 0, 0);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(210, 243, 22);
+    color: #EBE27D;
 }
