--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-    background: rgb(0, 0, 0) url(fallout-wallpaper.jpg);
+    background-color: rgb(0, 0, 0);
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #EBE27D;
 }
