--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,9 @@ div h1{
 div h2{
  text-align: left;
 }
+img{
+    transition: -webkit-transform 0.5s;
+}
+img:hover {
+    -webkit-transform: rotate(360deg);transform: rotate(360deg);
+}
